cluster/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-resuelto.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose-resuelto.yml
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: danieljimenez357/tfg-frontend:v2
          name: tfg-react
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
