cluster/openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - name: openldap
        image: osixia/openldap:1.5.0
        ports:
        - containerPort: 389
        - containerPort: 636
        volumeMounts:
        - mountPath: /var/lib/ldap
          name: openldap-data
        - mountPath: /etc/ldap/slapd.d
          name: openldap-config
      volumes:
      - name: openldap-data
        emptyDir: {}
      - name: openldap-config
        emptyDir: {}
