cluster/openldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose-resuelto.yml
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: openldap
  name: openldap
spec:
  ports:
    - name: "389"
      port: 389
      targetPort: 389
    - name: "636"
      port: 636
      targetPort: 636
  selector:
    io.kompose.service: openldap
